# Metodologias_Agiles_ML

./: .gitignore  README.md  data.dvc  pyproject.toml  realwaste.dvc  realwaste_mod.dvc
.dvc/: config
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md  data_summary.md
docs/modeling/: baseline_models.md  model_report.md
scripts/data_acquisition/: Carga de datos.ipynb  main.py
scripts/eda/: M5U3_2_exploratory_data_analysis.ipynb
scripts/evaluation/: Evaluacion_Modelo.ipynb  model_prd_colab.keras
scripts/preprocessing/: M5U3_2_data_preprocessing.ipynb  main.py
scripts/training/: Extraccion_caracteristicas_Modelamiento.ipynb  Modelo_base.ipynb  best_ft_model.keras  best_tl_model.keras  model_prd.keras  waste_classifier_baseline.keras
src/: docker-compose.yml
src/load/: Dockerfile  package-lock.json  package.json
src/load/src/: App.css  App.jsx  index.css
src/predict/: Dockerfile  main.py
src/predict/models/: __init__.py
src/predict/preprocessing/: __init__.py
